--- a/Capstone-FrontEnd/Capstone_Project/src/app/components/nav/nav.component.html
+++ b/Capstone-FrontEnd/Capstone_Project/src/app/components/nav/nav.component.html
@@ -9,7 +9,7 @@
             <img alt="alt" *ngIf="currentUser" src="{{currentUser.profileImageUrl}}" class="social-card-user-image" />
           </div>
           <div>
-            <p class="nav-text" *ngIf="currentUser">{{currentUser.username}}!</p>
+            <h4 class="nav-text mt-4" *ngIf="currentUser">🫶🏻 {{currentUser.username}}</h4>
           </div>
         </li>
       </div>
