--- a/Capstone-FrontEnd/Capstone_Project/src/app/components/home-pag/home-pag.component.html
+++ b/Capstone-FrontEnd/Capstone_Project/src/app/components/home-pag/home-pag.component.html
@@ -4,9 +4,10 @@
   <div class="d-flex justify-content-center">
     <div class="contenitore-responsive mt-5 mb-5">
       <div class="feed-home-page">
-        <form class="d-flex justify-content-center text-light mb-4" role="search">
+        <form class="d-flex justify-content-center text-light mb-5" role="search">
           <input class="form-control me-2 w-75 inpt" type="search" placeholder="Cerca utenti" aria-label="Search">
         </form>
+        <h4 class="text-start mt-0 mb-3 suggeriti">Persone che potresti conoscere 🤝</h4>
         <div class="slider">
           <div class="slide-track">
             <div class="slide d-flex justify-content-start align-items-start flex-column w-100"
