--- a/Capstone-FrontEnd/Capstone_Project/src/app/components/modal/modal.component.scss
+++ b/Capstone-FrontEnd/Capstone_Project/src/app/components/modal/modal.component.scss
@@ -47,8 +47,8 @@
   align-items: center;
 
   img {
-    width: 70%;
-    height: 70%;
+    width: 60%;
+    height: 60%;
     aspect-ratio: 1 / 1;
     border-radius: 12px;
   }
@@ -143,7 +143,7 @@
 
   /* Riduci progressivamente la larghezza dell'immagine */
   #container .image-modal {
-    width: 60%;
+    width: 40%;
     /* Larghezza fissa ridotta */
   }
 }
@@ -329,7 +329,7 @@ ul {
 }
 
 .reply-list .comment-box {
-  width: 568px;
+  max-width: 500px;
 }
 
 .comment-box .comment-head {
@@ -413,6 +413,7 @@ ul {
     max-height: 750px;
     overflow: auto;
   }
+
 }
 
 @media screen and (max-width: 866px) {
