--- a/Capstone-FrontEnd/Capstone_Project/src/app/components/post-modal/post-modal.component.scss
+++ b/Capstone-FrontEnd/Capstone_Project/src/app/components/post-modal/post-modal.component.scss
@@ -18,7 +18,7 @@
   right: 0;
   width: 50%;
   height: 100%;
-  background-color: rgba(27, 37, 28, 0.47);
+  background-color: #1b251c78;
   z-index: 100;
   animation: fade-in 0.3s ease-in-out;
 }
