--- a/Capstone-FrontEnd/Capstone_Project/src/app/components/user-profile/user-profile.component.scss
+++ b/Capstone-FrontEnd/Capstone_Project/src/app/components/user-profile/user-profile.component.scss
@@ -33,7 +33,11 @@ hr {
 
 .offcanvas-end{
   width: 250px;
-  background-color: #02210cc5;
+  background-color: #1b1e25;
+  -webkit-box-shadow: inset 5px 6px 27px -100px #7fffd4,1px 2px 25px 72px #7FFFD4;
+  -moz-box-shadow: inset 5px 6px 27px -100px #7fffd4,1px 2px 25px 72px #7FFFD4;
+  -o-box-shadow: inset 5px 6px 27px -100px #7fffd4,1px 2px 25px 72px #7FFFD4;
+  box-shadow: inset 5px 6px 27px -100px #7fffd4,1px 2px 25px 72px #7FFFD4;
 }
 
 .no-touch .scrollable.hover {
