implementati controlli per post, update e delete

--- a/Capstone-FrontEnd/Capstone_Project/src/app/components/home-pag/home-pag.component.html
+++ b/Capstone-FrontEnd/Capstone_Project/src/app/components/home-pag/home-pag.component.html
@@ -1,4 +1,5 @@
 <app-modal *ngIf="modal.showModal" (closeModalEvent)="closeModal()" [selectedPostId]="selectedPostId"></app-modal>
+app
 <app-nav></app-nav>
 <div class="feed container-fluid m-0 p-0">
   <div class="d-flex justify-content-center">
@@ -7,34 +8,51 @@
         <form class="d-flex justify-content-center text-light mb-5" role="search">
           <input class="form-control me-2 w-75 inpt" type="search" placeholder="Cerca utenti" aria-label="Search">
         </form>
-        <h4 class="text-start mt-0 mb-3 suggeriti">Persone che potresti conoscere 🤝</h4>
+        <h4 class="text-start mt-0 mb-3 suggeriti ms-3">Persone che potresti conoscere 🤝</h4>
         <div class="slider">
           <div class="slide-track">
             <div class="slide d-flex justify-content-start align-items-start flex-column w-100"
-            *ngFor="let users of suggestedUsers;">
-                <div class="d-flex justify-content-center align-items-center flex-column gap-1">
-                  <div [routerLink]="['/userInfo', users.userId]">
-                    <img src="{{users.profileImageUrl}}" alt="" class="social-card-user-image-carousel" />
-                  </div>
-                  <div [routerLink]="['/userInfo', users.userId]">
-                    <span class="bi">{{users.username}}</span>
-                  </div>
-                  <div>
-                    <a class="btn btn-success" (click)="toggleFollowing(users.userId, currentUser.userId)">Follow</a>
-                  </div>
+              *ngFor="let users of suggestedUsers;">
+              <div class="d-flex justify-content-center align-items-center flex-column gap-1">
+                <div [routerLink]="['/userInfo', users.userId]">
+                  <img src="{{users.profileImageUrl}}" alt="" class="social-card-user-image-carousel" />
                 </div>
+                <div [routerLink]="['/userInfo', users.userId]">
+                  <span class="bi">{{users.username}}</span>
+                </div>
+                <div>
+                  <a class="btn btn-success" (click)="toggleFollowing(users.userId, currentUser.userId)">Follow</a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-        <div *ngFor="let post of homePosts; let i = index">
+        <div *ngFor="let post of post; let i = index">
           <div class="social-card mt-4 ">
             <div>
-              <div class="social-card-header mb-5" [routerLink]="['/userInfo', post.userId]">
-                <img src="{{post.userImage}}" loading="lazy" class="social-card-user-image" />
-                <div class="overlay"></div>
-                <span class="social-card-user-name">{{post.username}}</span>
+              <div class="social-card-header mb-5">
+                <div [routerLink]="['/userInfo', post.userId]">
+                  <img src="{{post.userImage}}" loading="lazy" class="social-card-user-image" />
+                  <div class="overlay"></div>
+                  <span class="social-card-user-name">{{post.username}}</span>
+                </div>
+                <div class="btn-group dropend">
+                  <button class="btn three-dots border-0" type="button" data-bs-toggle="dropdown" aria-expanded="true">
+                    <i class="bi bi-three-dots"></i>
+                  </button>
+                  <ul class="dropdown-menu">
+                    <li *ngIf="currentUser?.userId === post?.userId">
+                      <button class="dropdown-item" type="button"><i class="bi bi-pencil-square me-2"></i>Edit</button>
+                    </li>
+                    <li *ngIf="currentUser?.userId === post?.userId">
+                      <button class="dropdown-item" type="button"><i class="bi bi-trash3 me-2"></i>Delete</button>
+                    </li>
+                    <li>
+                      <button class="dropdown-item" type="button"><i class="bi bi-bookmark me-2"></i>Aggiungi ai preferiti</button>
+                    </li>
+                  </ul>
+                </div>
               </div>
-
               <div class="social-card-image">
                 <div class="feed-home-page d-flex flex-wrap container gap-3">
                   <div class="card-posts">
@@ -58,13 +76,13 @@
                   <div class="d-flex text-light justify-content-center align-items-baseline gap-3 mt-2">
                     <div>
                       <div class="inputbox">
-                        <input required="required" type="string" name="content" id="content" ngModel>
+                        <input required="required" type="string" name="content" id="content" ngModel  [(ngModel)]="commentInput" #contentInput>
                         <span>Commenta</span>
                         <i></i>
                       </div>
                     </div>
                     <div>
-                      <i type="submit" class="bi bi-send-fill btn p-2" (click)="postComment(post.postId, form)"></i>
+                      <button type="submit" class="bi bi-send-fill btn p-2" (click)="postComment(post.postId, form)" [disabled]="!commentInput"></button>
                     </div>
                   </div>
                 </form>
