--- a/Capstone-FrontEnd/Capstone_Project/src/app/components/home-pag/home-pag.component.scss
+++ b/Capstone-FrontEnd/Capstone_Project/src/app/components/home-pag/home-pag.component.scss
@@ -179,6 +179,8 @@ a {
 .social-card-header {
   padding: 20px;
   height: 40px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .social-card-user-image {
