--- a/Capstone-FrontEnd/Capstone_Project/src/app/components/modal/modal.component.html
+++ b/Capstone-FrontEnd/Capstone_Project/src/app/components/modal/modal.component.html
@@ -16,9 +16,23 @@
               <i class="bi bi-three-dots"></i>
             </button>
             <ul class="dropdown-menu">
-              <li><button class="dropdown-item" type="button"><i class="bi bi-pencil-square me-2"></i>Edit</button></li>
-              <li><button class="dropdown-item" type="button"><i class="bi bi-trash3 me-2"></i>Delete</button></li>
+              <li *ngIf="currentUser?.userId === postUserIdVerify?.userId">
+                <button class="dropdown-item p-1" type="button">
+                  <i class="bi bi-pencil-square mx-2 p-1"></i>Edit
+                </button>
+              </li>
+              <li *ngIf="currentUser?.userId === postUserIdVerify?.userId">
+                <button class="dropdown-item p-1" type="button">
+                  <i class="bi bi-trash3 mx-2 p-1"></i>Delete
+                </button>
+              </li>
+              <li>
+                <button class="dropdown-item p-1" type="button">
+                  <i class="bi bi-bookmark mx-2 p-1"></i>Add Favourite
+                </button>
+              </li>
             </ul>
+
           </div>
         </div>
       </div>
