--- a/Capstone-FrontEnd/Capstone_Project/src/app/components/userinfo/userinfo.component.html
+++ b/Capstone-FrontEnd/Capstone_Project/src/app/components/userinfo/userinfo.component.html
@@ -70,7 +70,7 @@
     <div class="card-posts" *ngFor="let post of userPosts; let i = index">
       <img src="{{post.postImageUrl}}" alt="">
       <div class="overlay" (click)="openModal(post.postId, post.userId)"></div>
-      <button class="card-btn"><i class="bi bi-heart"></i></button>
+      <button class="card-btn" (click)="like(post.postId)"><i class="bi bi-heart"></i></button>
     </div>
   </div>
 </div>
