--- a/Capstone-FrontEnd/Capstone_Project/src/app/components/modal/modal.component.html
+++ b/Capstone-FrontEnd/Capstone_Project/src/app/components/modal/modal.component.html
@@ -1,4 +1,3 @@
-
 <app-reply *ngIf="modal.showReplyModal" (click)="onSecondModalClose()"
   [selectedCommentId]="selectedCommentId"></app-reply>
 <div id="overlay" (click)="closeModal()"></div>
@@ -6,7 +5,7 @@
   <div class="commenti-nav container-fluid">
     <div class="social-card" style="border: hidden;">
       <div class="social-card-header">
-        <div>
+        <div [routerLink]="userPostInfo?.userId === currentUser?.userId ? '/user' : ['/userInfo', userPostInfo?.userId]">
           <img [src]="userPostInfo?.profileImageUrl" class="social-card-user-image" loading="lazy" />
           <a class="social-card-user-name" *ngIf="userPostInfo">{{userPostInfo?.username}}</a>
         </div>
@@ -17,7 +16,7 @@
             </button>
             <ul class="dropdown-menu">
               <li *ngIf="currentUser?.userId === postUserIdVerify?.userId">
-                <button class="dropdown-item p-1" type="button">
+                <button class="dropdown-item p-1" type="button" [routerLink]="['/editPost', this.selectedPostId]">
                   <i class="bi bi-pencil-square mx-2 p-1"></i>Edit
                 </button>
               </li>
@@ -43,20 +42,38 @@
         <ul id="comments-list" class="comments-list">
           <ng-container *ngFor="let comment of postComments; let i = index">
             <li>
-
               <div class="comment-main-level d-flex justify-content-start align-items-start gap-4">
                 <div class="comment-avatar">
-                  <img [src]="userInfos[i]?.profileImageUrl" alt="">
+                  <img [src]="userInfos[i]?.profileImageUrl" alt="Not found"
+                    [routerLink]="comment?.usercommentId === currentUser?.userId ? '/user' : ['/userInfo', comment.usercommentId]">
                 </div>
                 <div class="comment-box">
                   <div class="comment-head">
-                    <h6 class="comment-name by-author"><a href="http://creaticode.com/blog">{{userInfos[i]?.username}}</a></h6>
+                    <h6 class="comment-name by-author"><a>{{userInfos[i]?.username}}</a></h6>
                     <span>{{comment.formattedDate}}</span>
                     <i class="bi bi-reply" (click)="openModal(comment.commentId)"></i>
                     <i class="bi bi-heart" (click)="likeComment(comment.commentId)">{{comment.likeCount}}</i>
                   </div>
                   <div class="comment-content">
-                    {{comment.content}}
+                    <div>
+                      {{comment.content}}
+                    </div>
+                    <div class="btn-group dropend" *ngIf="currentUser?.userId === comment?.usercommentId">
+                      <button class="btn three-dots border-0" type="button" data-bs-toggle="dropdown"
+                        aria-expanded="true">
+                        <i class="bi bi-three-dots-vertical"></i>
+                      </button>
+                      <ul class="dropdown-menu">
+                        <p>
+                          <button class="dropdown-item p-2" type="button"  [routerLink]="['/editComment', comment.commentId]"><i
+                              class="bi bi-pencil-square mx-2 p-2 my-2"></i>Edit</button>
+                        </p>
+                        <p>
+                          <button class="dropdown-item p-2" type="button"><i
+                              class="bi bi-trash3 mx-2 my-2 p-2"></i>Delete</button>
+                        </p>
+                      </ul>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -65,17 +82,37 @@
                   <li>
                     <div class="d-flex justify-content-start align-items-start gap-3">
                       <div class="comment-avatar">
-                        <img src="{{reply.userReplyImage}}" alt="">
+                        <img src="{{reply.userReplyImage}}" alt=""
+                          [routerLink]="reply?.userReplyId === currentUser?.userId ? '/user' : ['/userInfo', reply.userReplyId]">
                       </div>
                       <div class="comment-box">
                         <div class="comment-head">
-                          <h6 class="comment-name by-author"><a href="http://creaticode.com/blog">{{reply.username}}</a></h6>
+                          <h6 class="comment-name by-author"><a>{{reply.username}}</a></h6>
                           <span>{{reply.formattedDate}}</span>
                           <i class="bi bi-heart" (click)="likeReply(reply.replyId)">{{reply.likeCount}}</i>
                         </div>
                         <div class="comment-content">
-                          {{reply.content}}
+                          <div>
+                            {{reply.content}}
+                          </div>
+                          <div class="btn-group dropend" *ngIf="currentUser?.userId === reply?.userReplyId">
+                            <button class="btn three-dots border-0" type="button" data-bs-toggle="dropdown"
+                              aria-expanded="true">
+                              <i class="bi bi-three-dots-vertical"></i>
+                            </button>
+                            <ul class="dropdown-menu">
+                              <p>
+                                <button class="dropdown-item p-2" type="button" [routerLink]="['/editComment', reply.replyId]"><i
+                                    class="bi bi-pencil-square mx-2 p-2 my-2"></i>Edit</button>
+                              </p>
+                              <p>
+                                <button class="dropdown-item p-2" type="button"><i
+                                    class="bi bi-trash3 mx-2 my-2 p-2"></i>Delete</button>
+                              </p>
+                            </ul>
+                          </div>
                         </div>
+
                       </div>
                     </div>
                   </li>
@@ -100,10 +137,12 @@
             </div>
           </div>
           <div>
-            <button type="button" class="bi bi-send-fill btn p-2" (click)="postComment(selectedPostId, form)" [disabled]="!commentInput"></button>
+            <button type="button" class="bi bi-send-fill btn p-2" (click)="postComment(selectedPostId, form)"
+              [disabled]="!commentInput"></button>
           </div>
         </div>
       </form>
     </div>
   </div>
 </div>
+
