--- a/Capstone-FrontEnd/Capstone_Project/src/app/components/edit-post/edit-post.component.html
+++ b/Capstone-FrontEnd/Capstone_Project/src/app/components/edit-post/edit-post.component.html
@@ -6,7 +6,6 @@
       <div class="social-card-header mb-5">
         <div [routerLink]="post?.userId === currentUser?.userId ? '/user' : ['/userInfo', post.userId]">
           <img [src]="userPostInfo?.profileImageUrl" loading="lazy" class="social-card-user-image" />
-          <div class="overlay"></div>
           <span class="social-card-user-name">{{userPostInfo?.username}}</span>
         </div>
       </div>
@@ -14,8 +13,6 @@
         <div class="feed-home-page d-flex flex-wrap container gap-3">
           <div class="card-posts">
             <img [src]="post?.postImageUrl" alt="">
-            <div class="overlay"></div>
-            <button class="card-btn"><i class="bi bi-heart"></i></button>
           </div>
         </div>
       </div>
@@ -28,17 +25,17 @@
     </div>
   </div>
     <div>
-      <form #form="ngForm" class="text-light social-card-footer pt-0">
+      <form #form="ngForm" (ngSubmit)="modificaPost(form)" class="text-light social-card-footer pt-0">
         <div class="d-flex text-light justify-content-center align-items-baseline gap-3 mt-2">
           <div>
             <div class="inputbox w-100">
-              <input type="text" name="description" id="description" ngModel required>
+              <input type="text" name="description" id="description" [(ngModel)]="post.description">
               <span>Scrivi qui..</span>
               <i></i>
             </div>
           </div>
           <div>
-            <button type="submit" [disabled]="form.invalid" class="bi bi-send-fill btn p-2" (click)="modificaPost(form)">&nbsp;Conferma</button>
+            <button type="submit" class="bi bi-send-fill btn p-2">&nbsp;Conferma</button>
           </div>
           <div>
             <button type="button" class="btn bi bi-door-closed p-2 border-1 mx-2" [routerLink]="['/home']">&nbsp;Annulla</button>
