--- a/Capstone-FrontEnd/Capstone_Project/src/app/components/user-profile/user-profile.component.html
+++ b/Capstone-FrontEnd/Capstone_Project/src/app/components/user-profile/user-profile.component.html
@@ -5,26 +5,50 @@
     <div class="profile-card js-profile-card">
       <div class="d-flex justify-content-center align-items-center profile-card__container">
         <div class="profile-card__img">
-          <img [src]="currentUser?.profileImageUrl" alt="profile card">
+          <img [src]="currentUser.profileImageUrl" alt="profile card">
         </div>
         <div class="profile-card__cnt js-profile-cnt">
-          <div class="profile-card__name">{{currentUser?.nome}} {{currentUser?.cognome}}</div>
-          <div class="profile-card__name mb-3">@{{currentUser?.username}}</div>
-          <div class="profile-card__txt"><strong>voglio vivere con il sole in fronte </strong></div>
+          <div class="profile-card__name">{{currentUser.nome}} {{currentUser.cognome}}</div>
+          <div class="profile-card__name mb-4">@{{currentUser.username}}</div>
           <div class="profile-card-loc">
             <span class="profile-card-loc__txt">
-              Istanbul, Turkey
+             Attualmente a {{currentUser.citta}} /
             </span>
+            <span class="profile-card-loc__txt">
+              Nato il: {{currentUser.dataDiNascita}}
+             </span>
+            <hr class="my-4">
           </div>
+          <h6 class="text-start">Bio:</h6>
+          <div class="profile-card__txt text-start"><strong>{{currentUser.bio}}</strong></div>
+          <hr class="my-1">
           <div class="profile-card-ctr">
-            <button class="profile-card__button button--orange">Impostazioni</button>
+            <div class="dropdown">
+
+              <button class="btn three-dots profile-card__button button--orange" type="button" data-bs-toggle="dropdown"
+                aria-expanded="true">
+                <i class="bi bi-three-dots-vertical"> Impostazioni</i>
+              </button>
+              <ul class="dropdown-menu">
+                <li>
+                  <button class="dropdown-item p-1" type="button" data-bs-toggle="modal"
+                    data-bs-target="#staticBackdrop">
+                    <i class="bi bi-pencil-square mx-2 p-1"></i>Edit
+                  </button>
+                </li>
+                <li>
+                  <button class="dropdown-item p-1" type="button">
+                    <i class="bi bi-trash3 mx-2 p-1"></i>Delete
+                  </button>
+                </li>
+              </ul>
+
+            </div>
             <button class="btn profile-card__button button--orange" type="button" data-bs-toggle="offcanvas"
               data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Friend List</button>
           </div>
-
         </div>
       </div>
-
       <div class="profile-card-message js-message">
         <form class="profile-card-form">
           <div class="profile-card-form__container">
@@ -34,7 +58,6 @@
             <button class="profile-card__button button--blue js-message-close">
               Send
             </button>
-
             <button class="profile-card__button button--gray js-message-close">
               Cancel
             </button>
@@ -48,17 +71,10 @@
 <div class="container-fluid d-flex flex-column justify-content-center">
   <div class="profile-card-inf">
     <div class="profile-card-inf__item">
-      <div class="profile-card-inf__title">{{currentUser?.followers}}</div>
-      <div class="profile-card-inf__txt">Followers</div>
+      <div class="profile-card-inf__title"> <strong>Followers</strong> {{currentUser?.followers?.lenth}}</div>
     </div>
     <div class="profile-card-inf__item">
-      <div class="profile-card-inf__title"></div><!--{{userPosts[i].posts}}-->
-      <div class="profile-card-inf__txt">Posts</div>
-    </div>
-
-    <div class="profile-card-inf__item">
-      <div class="profile-card-inf__title">85</div>
-      <div class="profile-card-inf__txt">Likes</div>
+      <div class="profile-card-inf__title"><strong>Post</strong> {{currentUser?.posts?.length}}</div>
     </div>
   </div>
   <hr class="container">
@@ -82,9 +98,7 @@
       <li routerLinkActive [routerLink]="['/userInfo', user.userId]">
         <div class="social-card-header d-flex justify-content-between align-items-center mt-4 mb-5">
           <div>
-            <img
-              src="{{user.profileImageUrl}}"
-              class="social-card-user-image" />
+            <img src="{{user.profileImageUrl}}" class="social-card-user-image" />
           </div>
           <div class="nome-User">
             <p class="social-card-user-name m-0 ms-2" routerLinkActive>{{user.username}}</p>
@@ -95,5 +109,72 @@
         </div>
       </li>
     </ul>
+  </div>
+</div>
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+  aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog modal-dialog-centered modal-dialog-scrollable">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="staticBackdropLabel">Modifica i tuoi dati</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="login-box">
+          <form #form="ngForm" (ngSubmit)="updateUser(form)" class="text-light" enctype="multipart/form-data">
+            <div>
+              <label for="nome">Nome</label>
+              <input name="nome" class="form-control transparent-input" id="nome" type="text" [(ngModel)]="currentUser.nome">
+
+              <label for="cognome">Cognome</label>
+              <input name="cognome" class="form-control transparent-input" id="cognome" type="text" [(ngModel)]="currentUser.cognome">
+
+              <label for="username">Username</label>
+              <input name="username" class="form-control transparent-input" id="username" type="text" [(ngModel)]="currentUser.username">
+
+              <label for="bio">Bio</label>
+              <input name="bio" class="form-control transparent-input" id="bio" type="text" [(ngModel)]="currentUser.bio">
+
+              <label for="genere">Genere:</label>
+              <select name="genere" class="form-control transparent-input" id="genere" [(ngModel)]="currentUser.genere" type="text">
+                <option value="uomo">Uomo</option>
+                <option value="donna">Donna</option>
+              </select>
+
+              <label for="citta">Città</label>
+              <input name="citta" class="form-control transparent-input" id="citta" type="citta" [(ngModel)]="currentUser.citta">
+
+              <label for="birthdate">Data Di Nascita</label>
+              <input name="dataDiNascita" class="form-control transparent-input" id="dataDiNascita" type="date" [(ngModel)]="currentUser.dataDiNascita">
+            </div>
+            <div>
+              <div class="d-flex justify-content-center align-items-center gap-3">
+                <div class="input-div my-4">
+                  <input class="input" type="file" accept="image/*" id="Image" name="Image" (change)="onFileSelected($event)">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" stroke-linejoin="round" stroke-linecap="round"
+                    viewBox="0 0 24 24" stroke-width="2" fill="none" stroke="currentColor" class="icon">
+                    <polyline points="16 16 12 12 8 16"></polyline>
+                    <line y2="21" x2="12" y1="12" x1="12"></line>
+                    <path d="M20.39 18.39A5 5 0 0 0 18 9h-1.26A8 8 0 1 0 3 16.3"></path>
+                    <polyline points="16 16 12 12 8 16"></polyline>
+                  </svg>
+                </div>
+                <div>
+                  <p>Carica un'immagine</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="d-flex justify-content-center">
+              <button type="submit" class="btn mt-4">Modifica</button>
+            </div>
+          </form>
+
+        </div>
+      </div>
+      <div class="modal-footer d-flex justify-content-center">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
   </div>
 </div>
