--- a/Capstone-FrontEnd/Capstone_Project/src/app/components/user-profile/user-profile.component.scss
+++ b/Capstone-FrontEnd/Capstone_Project/src/app/components/user-profile/user-profile.component.scss
@@ -31,13 +31,13 @@ hr {
 
 }
 
-.offcanvas-end{
+.offcanvas-end {
   width: 250px;
   background-color: #1b1e25;
-  -webkit-box-shadow: inset 5px 6px 27px -100px #7fffd4,1px 2px 25px 72px #7FFFD4;
-  -moz-box-shadow: inset 5px 6px 27px -100px #7fffd4,1px 2px 25px 72px #7FFFD4;
-  -o-box-shadow: inset 5px 6px 27px -100px #7fffd4,1px 2px 25px 72px #7FFFD4;
-  box-shadow: inset 5px 6px 27px -100px #7fffd4,1px 2px 25px 72px #7FFFD4;
+  -webkit-box-shadow: inset 5px 6px 27px -100px #7fffd4, 1px 2px 25px 72px #7FFFD4;
+  -moz-box-shadow: inset 5px 6px 27px -100px #7fffd4, 1px 2px 25px 72px #7FFFD4;
+  -o-box-shadow: inset 5px 6px 27px -100px #7fffd4, 1px 2px 25px 72px #7FFFD4;
+  box-shadow: inset 5px 6px 27px -100px #7fffd4, 1px 2px 25px 72px #7FFFD4;
 }
 
 .no-touch .scrollable.hover {
@@ -187,6 +187,7 @@ div li {
   border-radius: 12px;
   max-width: 800px;
   position: relative;
+  color: #03e9f4;
 
   &.active {
     .profile-card__cnt {
@@ -205,6 +206,7 @@ div li {
       transition-delay: .1s;
     }
   }
+
   &__container {
 
     @media screen and (max-width: 768px) {
@@ -213,6 +215,7 @@ div li {
     }
 
   }
+
   &__img {
     width: 150px;
     height: 150px;
@@ -262,6 +265,7 @@ div li {
 
     strong {
       font-weight: 700;
+      color: #ffffff;
     }
 
   }
@@ -288,7 +292,7 @@ div li {
     &__title {
       font-weight: 700;
       font-size: 20px;
-      color: #326352;
+      color:#03e9f4;
     }
 
     &__txt {
@@ -441,4 +445,315 @@ div li {
 
   }
 
+}
+
+.modal-content {
+  background: rgba(0, 0, 0, .5);
+  color: #03e9f4;
+}
+
+.modal-body {
+  background: rgba(0, 0, 0, .5);
+  box-sizing: border-box;
+  box-shadow: 0 15px 25px rgba(0, 0, 0, .6);
+  border-radius: 10px
+}
+
+.login-box {
+  background: rgba(0, 0, 0, .5);
+  box-sizing: border-box;
+  box-shadow: 0 15px 25px rgba(0, 0, 0, .6);
+  border-radius: 10px;
+}
+
+.login-box h2 {
+  margin: 0 0 30px;
+  padding: 0;
+  color: #fff;
+  text-align: center;
+}
+
+.login-box .user-box {
+  position: relative;
+}
+
+.login-box .user-box input {
+  width: 100%;
+  padding: 10px 0;
+  font-size: 16px;
+  color: #fff;
+  margin-bottom: 30px;
+  border: none;
+  border-bottom: 1px solid #fff;
+  outline: none;
+  background: transparent;
+}
+
+.login-box .user-box label {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 10px 0;
+  font-size: 16px;
+  color: #fff;
+  pointer-events: none;
+  transition: .5s;
+}
+
+.login-box .user-box input:focus~label,
+.login-box .user-box input:valid~label {
+  top: -20px;
+  left: 0;
+  color: #03e9f4;
+  font-size: 12px;
+}
+
+.login-box form button {
+  position: relative;
+  display: inline-block;
+  padding: 10px 20px;
+  color: #03e9f4;
+  font-size: 16px;
+  text-decoration: none;
+  text-transform: uppercase;
+  overflow: hidden;
+  transition: .5s;
+  margin-top: 10px;
+  letter-spacing: 4px
+}
+
+.login-box button:hover {
+  background: #03e8f468;
+  color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 0 5px #03e8f468,
+    0 0 25px #03e8f468,
+    0 0 50px #03e8f468,
+    0 0 100px #03e8f468;
+}
+
+.login-box button span {
+  position: absolute;
+  display: block;
+}
+
+.login-box button span:nth-child(1) {
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(90deg, transparent, #03e9f4);
+  animation: btn-anim1 1s linear infinite;
+}
+
+@keyframes btn-anim1 {
+  0% {
+    left: -100%;
+  }
+
+  50%,
+  100% {
+    left: 100%;
+  }
+}
+
+.login-box button span:nth-child(2) {
+  top: -100%;
+  right: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(180deg, transparent, #03e9f4);
+  animation: btn-anim2 1s linear infinite;
+  animation-delay: .25s
+}
+
+@keyframes btn-anim2 {
+  0% {
+    top: -100%;
+  }
+
+  50%,
+  100% {
+    top: 100%;
+  }
+}
+
+.login-box button span:nth-child(3) {
+  bottom: 0;
+  right: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(270deg, transparent, #03e9f4);
+  animation: btn-anim3 1s linear infinite;
+  animation-delay: .5s
+}
+
+@keyframes btn-anim3 {
+  0% {
+    right: -100%;
+  }
+
+  50%,
+  100% {
+    right: 100%;
+  }
+}
+
+.login-box button span:nth-child(4) {
+  bottom: -100%;
+  left: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(360deg, transparent, #03e9f4);
+  animation: btn-anim4 1s linear infinite;
+  animation-delay: .75s
+}
+
+@keyframes btn-anim4 {
+  0% {
+    bottom: -100%;
+  }
+
+  50%,
+  100% {
+    bottom: 100%;
+  }
+}
+
+.btn {
+  font-size: 1.2rem;
+  padding: 1rem 2.5rem;
+  border: none;
+  outline: none;
+  border-radius: 0.4rem;
+  cursor: pointer;
+  text-transform: uppercase;
+  background-color: rgb(14, 14, 26);
+  color: rgb(234, 234, 234);
+  font-weight: 700;
+  transition: 0.6s;
+  box-shadow: 0px 0px 60px #1f4c65;
+  -webkit-box-reflect: below 10px linear-gradient(to bottom, rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.4));
+}
+
+.btn:active {
+  scale: 0.92;
+}
+
+.btn:hover {
+  background: rgb(2, 29, 78);
+  background: linear-gradient(270deg, rgba(2, 29, 78, 0.681) 0%, rgba(31, 215, 232, 0.873) 60%);
+  color: rgb(4, 4, 38);
+}
+
+input {
+  background-color: transparent;
+  color: #03e9f4;
+}
+
+.input-div {
+  position: relative;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  border: 2px solid rgb(1, 235, 252);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  box-shadow: 0px 0px 100px rgb(1, 235, 252), inset 0px 0px 10px rgb(1, 235, 252), 0px 0px 5px rgb(255, 255, 255);
+  animation: flicker 2s linear infinite;
+}
+
+.icon {
+  color: rgb(1, 235, 252);
+  font-size: 2rem;
+  cursor: pointer;
+  animation: iconflicker 2s linear infinite;
+}
+
+.input {
+  position: absolute;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  cursor: pointer !important;
+}
+select{
+  background-color: transparent;
+  color: #03e9f4;
+  background: transparent;
+  option{
+    color:#030b4a;
+    &:hover{
+      color: #0a3f1c;
+    }
+  }
+}
+.transparent-input {
+  background-color: transparent;
+  border: 1px solid #03e9f4;
+  border-top: hidden;
+  border-left: hidden;
+  border-right: hidden;
+  color: #03e9f4;
+}
+
+
+@keyframes flicker {
+  0% {
+    border: 2px solid rgb(1, 235, 252);
+    box-shadow: 0px 0px 100px rgb(1, 235, 252), inset 0px 0px 10px rgb(1, 235, 252), 0px 0px 5px rgb(255, 255, 255);
+  }
+
+  5% {
+    border: none;
+    box-shadow: none;
+  }
+
+  10% {
+    border: 2px solid rgb(1, 235, 252);
+    box-shadow: 0px 0px 100px rgb(1, 235, 252), inset 0px 0px 10px rgb(1, 235, 252), 0px 0px 5px rgb(255, 255, 255);
+  }
+
+  25% {
+    border: none;
+    box-shadow: none;
+  }
+
+  30% {
+    border: 2px solid rgb(1, 235, 252);
+    box-shadow: 0px 0px 100px rgb(1, 235, 252), inset 0px 0px 10px rgb(1, 235, 252), 0px 0px 5px rgb(255, 255, 255);
+  }
+
+  100% {
+    border: 2px solid rgb(1, 235, 252);
+    box-shadow: 0px 0px 100px rgb(1, 235, 252), inset 0px 0px 10px rgb(1, 235, 252), 0px 0px 5px rgb(255, 255, 255);
+  }
+}
+
+@keyframes iconflicker {
+  0% {
+    opacity: 1;
+  }
+
+  5% {
+    opacity: 0.2;
+  }
+
+  10% {
+    opacity: 1;
+  }
+
+  25% {
+    opacity: 0.2;
+  }
+
+  30% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
