--- a/Capstone-FrontEnd/Capstone_Project/src/app/components/nav/nav.component.scss
+++ b/Capstone-FrontEnd/Capstone_Project/src/app/components/nav/nav.component.scss
@@ -51,7 +51,7 @@
 .navbar i {
   font-size: 1.8em;
   margin-right: 10px;
-  color:rgb(3, 118, 79);
+  color:#03764f;
 }
 .social-card-user-image {
   border-radius: 50%;
