--- a/Capstone-FrontEnd/Capstone_Project/src/app/app.component.html
+++ b/Capstone-FrontEnd/Capstone_Project/src/app/app.component.html
@@ -1,13 +1,10 @@
+<div class="backgroundFill">
+  <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/moon2.png" alt="" class="immagineBackground">
+  <div class="stars"></div>
+  <div class="twinkling"></div>
+  <div class="clouds"></div>
+</div>
 
 
 
-
-
-
-<div id='stars'></div>
-<div id='stars2'></div>
-<div id='stars3'></div>
-
-
-
-<router-outlet></router-outlet>
+  <router-outlet></router-outlet>
