--- a/Capstone-FrontEnd/Capstone_Project/src/app/auth/login/login.component.html
+++ b/Capstone-FrontEnd/Capstone_Project/src/app/auth/login/login.component.html
@@ -5,14 +5,14 @@
     </div>
     <ng-template #login>
       <div class="login-box">
-        <h2>Login</h2>
         <form #form="ngForm" class="text-light">
+          <h2>Login</h2>
           <div class="user-box">
-            <input type="email" class="input" id="email" name="email" required [(ngModel)]="email">
-            <label>Username or Email</label>
+            <input type="email" class="input-login" id="email" name="email" required [(ngModel)]="email">
+            <label>Email</label>
           </div>
           <div class="user-box">
-            <input type="password" class="input" placeholder="Password" id="password" name="password" required
+            <input type="password" class="input-login" placeholder="Password" id="password" name="password" required
               [(ngModel)]="password">
             <label>Password</label>
           </div>
@@ -36,41 +36,65 @@
 
     <ng-container *ngIf="register; else login">
       <div class="login-box">
-        <h2>Registrazione</h2>
         <form #form="ngForm" (ngSubmit)="registra(form)" class="text-light" enctype="multipart/form-data">
-          <div>
-            <label for="nome">Nome</label>
-            <input name="nome" required ngModel class="form-control" id="nome" type="text">
-            <label for="cognome">Cognome</label>
-            <input name="cognome" required ngModel class="form-control" id="cognome" type="text">
-            <label for="username">Username</label>
-            <input name="username" required ngModel class="form-control" id="username" type="text">
-          </div>
-          <div>
-            <label for="email">Email</label>
-            <input type="email" name="email" id="email" class="form-control" required ngModel>
-          </div>
-          <div>
-            <label for="password">Password</label>
-            <input type="password" id="password" name="password" class="form-control" required ngModel>
-          </div>
-          <div>
-            <label for="Image" class="my-3">Seleziona la tua immagine del profilo</label>
-            <input type="file" accept="image/*" id="Image" name="Image" (change)="onFileSelected($event)">
-          </div>
-          <button type="submit" [disabled]="form.invalid || isLoading" class="btn mt-4">
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-            Registrati
-          </button>
-          <div class="text-light text-center mt-4 mb-0">
-            <h5>Sei già Registrato?</h5>
-          </div>
-          <div class="d-flex justify-content-center">
-            <button class="text-center d-flex justify-content-center btn" (click)="changeToLogin()">Effettua il
-              login</button>
+          <div class="formRegistrazione">
+            <div>
+              <h2>Registrazione</h2>
+              <label for="nome">Nome</label>
+              <input name="nome" required ngModel class="form-control" id="nome" type="text">
+
+              <label for="cognome">Cognome</label>
+              <input name="cognome" required ngModel class="form-control" id="cognome" type="text">
+
+              <label for="birthdate">Data Di Nascita</label>
+              <input name="dataDiNascita" class="form-control transparent-input" id="dataDiNascita" type="date" ngModel
+                required>
+
+              <label for="username">Username</label>
+              <input name="username" required ngModel class="form-control" id="username" type="text">
+
+              <div>
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email" class="form-control" required ngModel>
+              </div>
+              <div>
+                <label for="password">Password</label>
+                <input type="password" id="password" name="password" class="form-control" required ngModel>
+              </div>
+            </div>
+            <div>
+              <div class="d-flex justify-content-center align-items-center gap-3">
+                <div class="input-div my-4">
+                  <input class="input" type="file" accept="image/*" id="Image" name="Image" required
+                    (change)="onFileSelected($event)">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" stroke-linejoin="round"
+                    stroke-linecap="round" viewBox="0 0 24 24" stroke-width="2" fill="none" stroke="currentColor"
+                    class="icon">
+                    <polyline points="16 16 12 12 8 16"></polyline>
+                    <line y2="21" x2="12" y1="12" x1="12"></line>
+                    <path d="M20.39 18.39A5 5 0 0 0 18 9h-1.26A8 8 0 1 0 3 16.3"></path>
+                    <polyline points="16 16 12 12 8 16"></polyline>
+                  </svg>
+                </div>
+                <div>
+                  <p class="load-image">Carica un immagine</p>
+                </div>
+              </div>
+              <button type="submit" [disabled]="form.invalid" class="btn mt-4">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                Registrati
+              </button>
+              <div class="text-light text-center mt-4 mb-0">
+                <h5>Sei già Registrato?</h5>
+              </div>
+              <div class="d-flex justify-content-center">
+                <button class="text-center d-flex justify-content-center btn" (click)="changeToLogin()">Effettua il
+                  login</button>
+              </div>
+            </div>
           </div>
         </form>
       </div>
