--- a/Capstone-FrontEnd/Capstone_Project/src/app/components/edit-comment/edit-comment.component.html
+++ b/Capstone-FrontEnd/Capstone_Project/src/app/components/edit-comment/edit-comment.component.html
@@ -5,12 +5,13 @@
       <div class="comments">
         <div>
           <div class="card v-card v-sheet theme--light elevation-2">
-            <div  class="header d-flex flex-wrap justify-content-start align-items-center align-content-center  gap-1">
+            <div class="header d-flex flex-wrap justify-content-start align-items-center align-content-center  gap-1">
               <div class="v-avatar avatar d-flex justify-content-center" style="height: 50px; width: 50px;"><img
                   [src]="userInfo?.profileImageUrl">
               </div>
               <div>
-                <span class="displayName title">{{userInfo?.username}}</span> <span class="displayName caption">{{comment?.formattedDate}}</span>
+                <span class="displayName title">{{userInfo?.username}}</span> <span
+                  class="displayName caption">{{comment?.formattedDate}}</span>
               </div>
             </div>
             <div class="wrapper comment">
@@ -22,7 +23,7 @@
     </div>
     <div>
       <form #form="ngForm" class="text-light social-card-footer pt-0">
-        <div class="d-flex text-light justify-content-center align-items-baseline gap-3 mt-2">
+        <div class="d-flex text-light justify-content-center align-items-baseline gap-3 mt-2 form-response">
           <div>
             <div class="inputbox">
               <input type="text" name="content" id="content" [(ngModel)]="comment!.content!" required>
@@ -30,12 +31,17 @@
               <i></i>
             </div>
           </div>
-          <div>
-            <button type="submit" class="bi bi-send-fill btn p-2" (click)="edit(comment.commentId, comment.repliesId, form)"></button>
+          <div class="d-flex justify-content-center align-items-center gap-3">
+            <div>
+              <button type="submit" class="bi bi-send-fill btn p-2"
+                (click)="edit(comment.commentId, comment.repliesId, form)"></button>
+            </div>
+            <div>
+              <button type="button" class="btn bi bi-door-closed p-2 border-1 mx-2"
+                [routerLink]="['/home']">&nbsp;Annulla</button>
+            </div>
           </div>
-          <div>
-            <button type="button" class="btn bi bi-door-closed p-2 border-1 mx-2" [routerLink]="['/home']">&nbsp;Annulla</button>
-          </div>
+
         </div>
       </form>
 
