--- a/Capstone-FrontEnd/Capstone_Project/src/app/components/edit-comment/edit-comment.component.scss
+++ b/Capstone-FrontEnd/Capstone_Project/src/app/components/edit-comment/edit-comment.component.scss
@@ -338,6 +338,15 @@ a:hover {
   }
 
 }
+
+@media screen and (max-width: 578px){
+.form-response{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+}
 @media screen and (max-width: 390px) {
 
   .avatar {
