--- a/Capstone-FrontEnd/Capstone_Project/src/app/components/edit-post/edit-post.component.html
+++ b/Capstone-FrontEnd/Capstone_Project/src/app/components/edit-post/edit-post.component.html
@@ -1,4 +1,3 @@
-
 <div class="container">
   <h3 class="text-center my-3 bi">Modifica La descrizione del tuo commento</h3>
   <div class="social-card mt-4 ">
@@ -24,23 +23,27 @@
       </div>
     </div>
   </div>
-    <div>
-      <form #form="ngForm" (ngSubmit)="modificaPost(form)" class="text-light social-card-footer pt-0">
-        <div class="d-flex text-light justify-content-center align-items-baseline gap-3 mt-2">
-          <div>
-            <div class="inputbox w-100">
-              <input type="text" name="description" id="description" [(ngModel)]="post.description">
-              <span>Scrivi qui..</span>
-              <i></i>
-            </div>
+  <div>
+    <form #form="ngForm" (ngSubmit)="modificaPost(form)" class="text-light social-card-footer pt-0">
+      <div class="d-flex text-light justify-content-center align-items-baseline gap-3 mt-2 form-response">
+        <div>
+          <div class="inputbox">
+            <input type="text" name="description" id="description" [(ngModel)]="post.description">
+            <span>Scrivi qui..</span>
+            <i></i>
           </div>
+        </div>
+        <div class="d-flex justify-content-between align-items-center gap-3">
           <div>
             <button type="submit" class="bi bi-send-fill btn p-2">&nbsp;Conferma</button>
           </div>
           <div>
-            <button type="button" class="btn bi bi-door-closed p-2 border-1 mx-2" [routerLink]="['/home']">&nbsp;Annulla</button>
+            <button type="button" class="btn bi bi-door-closed p-2 border-1 mx-2"
+              [routerLink]="['/home']">&nbsp;Annulla</button>
           </div>
         </div>
-      </form>
-    </div>
+
+      </div>
+    </form>
+  </div>
 </div>
