--- a/Capstone-FrontEnd/Capstone_Project/src/app/components/edit-post/edit-post.component.scss
+++ b/Capstone-FrontEnd/Capstone_Project/src/app/components/edit-post/edit-post.component.scss
@@ -12,7 +12,7 @@ a{
 
 .inputbox {
   position: relative;
-  max-width: 260px;
+  width:300px;
   margin: 0 auto 10px;
   margin-bottom: 25px;
 }
@@ -274,4 +274,18 @@ hr {
   display: flex;
 }
 
-
+@media screen and (max-width: 768px){
+.form-response{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+}
+.social-card-footer {
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+}
