--- a/Capstone-FrontEnd/Capstone_Project/src/app/components/home-pag/home-pag.component.scss
+++ b/Capstone-FrontEnd/Capstone_Project/src/app/components/home-pag/home-pag.component.scss
@@ -1,3 +1,7 @@
+body{
+  overflow-y: scroll  !important;
+}
+
 .card-posts {
   position: relative;
   width: 100%;
@@ -173,6 +177,10 @@ a {
   border-radius: 10px;
   max-width: 600px;
   margin: auto;
+  -webkit-box-shadow: inset 2px -6px 3px -15px #7FFFD4,0px 11px 20px -1px #7FFFD4;
+  -moz-box-shadow: inset 2px -6px 3px -15px #7FFFD4,0px 11px 20px -1px #7FFFD4;
+  -o-box-shadow: inset 2px -6px 3px -15px #7FFFD4,0px 11px 20px -1px #7FFFD4;
+  box-shadow: inset 2px -6px 3px -15px #7FFFD4,0px 11px 20px -1px #7FFFD4;
 }
 
 
