--- a/Capstone-FrontEnd/Capstone_Project/src/app/components/modal/modal.component.scss
+++ b/Capstone-FrontEnd/Capstone_Project/src/app/components/modal/modal.component.scss
@@ -117,8 +117,8 @@
 
 .image_modal {
   border-radius: 10px;
-  max-width: 100%;
-  margin-top: 100px;
+  max-width: 80%;
+  margin-top: 80px;
   object-fit: cover;
   aspect-ratio: 1/1;
   display: flex;
@@ -135,7 +135,7 @@
 
 
   #container .image-modal {
-    width: 40%;
+    width: 100%;
 
   }
 }
@@ -149,11 +149,12 @@
   margin-top: 20px;
   margin-bottom: 40px;
   height: 50px;
-  max-width: 80%;
+  max-width: 90%;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  color: #fff;
 }
 
 .social-card-user-image {
@@ -165,12 +166,17 @@
 .social-card-user-name {
   margin-left: 15px;
   font-weight: bold;
-  color: #17ead1;
+  color: #ffffff;
 
 }
-
+.three-dots-btn{
+  color: #17ead1 !important;
+}
+.text-light i{
+  color: #17ead1 ;
+}
 .bi-three-dots {
-  color: #17ead1;
+  color: #17ead1 !important;
 }
 
 hr {
@@ -228,12 +234,12 @@ ul {
 
 .reply-list li:before {
   content: '';
-  width: 60px;
+  width: 65px;
   height: 2px;
-  background: #c7cacb;
+  background: #00b9f7;
   position: absolute;
   top: 18px;
-  left: -55px;
+  left: -65px;
 }
 
 
@@ -258,15 +264,15 @@ ul {
 }
 
 .comments-list .comment-avatar {
-  width: 65px;
-  height: 65px;
+  width: 55px;
+  height: 55px;
   position: relative;
   z-index: 99;
   float: left;
-  border: 3px solid #FFF;
+  border: 3px solid #03764f;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
-  border-radius: 50%;
+  border-radius: 20%;
   -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
@@ -418,10 +424,43 @@ ul {
     max-height: 750px;
     overflow: auto;
   }
+  .comments-list:before {
+    content: '';
+    width: 2px;
+    height: 100vw;
+    background: #00b9f7;
+    position: absolute;
+    left: 62px;
+    top: 0;
+  }
 
+
+  .reply-list:before,
+  .reply-list:after {
+    display: none;
+  }
+
+  .reply-list li:before {
+    content: '';
+    width: 60px;
+    height: 2px;
+    background: #00b9f7;
+    position: absolute;
+    top: 18px;
+    left: -60px;
+  }
 }
 
 @media screen and (max-width: 866px) {
+  .comments-list:before {
+    content: '';
+    width: 2px;
+    height: 100vw;
+    background: #00b9f7;
+    position: absolute;
+    left: 62px;
+    top: 0;
+  }
   .comments-container {
     margin: 10px 5px;
     width: 748px;
@@ -463,6 +502,15 @@ ul {
 }
 
 @media screen and (max-width: 661px) {
+  .comments-list:before {
+    content: '';
+    width: 2px;
+    height: 100vw;
+    background: #00b9f7;
+    position: absolute;
+    left: 62px;
+    top: 0;
+  }
   .comments-list .comment-box {
     width: 420px;
   }
@@ -473,6 +521,15 @@ ul {
 }
 
 @media screen and (max-width: 561px) {
+  .comments-list:before {
+    content: '';
+    width: 2px;
+    height: 100vw;
+    background: #00b9f7;
+    position: absolute;
+    left: 62px;
+    top: 0;
+  }
   .comments-list .comment-box {
     width: 320px;
   }
@@ -487,6 +544,15 @@ ul {
 }
 
 @media screen and (max-width: 461px) {
+  .comments-list:before {
+    content: '';
+    width: 2px;
+    height: 100vw;
+    background: #00b9f7;
+    position: absolute;
+    left: 62px;
+    top: 0;
+  }
   .comments-list .comment-avatar {
     width: 50px;
     height: 50px;
@@ -494,7 +560,7 @@ ul {
 
   .comments-list:before {
     width: 2px;
-    height: 100%;
+    height: 100vh;
     background: #00b9f7;
     position: absolute;
     left: 55px;
@@ -512,12 +578,15 @@ ul {
 
   .reply-list li:before {
     content: '';
-    width: 40px;
+    width: 30px;
     height: 2px;
     background: #00b9f7;
     position: absolute;
     top: 18px;
     left: -26px;
+  }
+  .bi{
+    font-size: 0.9em;
   }
 
   .comment-box .comment-name.by-author:after {
@@ -535,5 +604,33 @@ ul {
 
   .comment-box .comment-head span {
     display: none;
+  }
+
+  .comment-content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: #ffffff;
+    padding: 12px;
+    font-size: 12px;
+    color: #595959;
+    -webkit-border-radius: 0 0 4px 4px;
+    -moz-border-radius: 0 0 4px 4px;
+    border-radius: 0 0 4px 4px;
+  }
+}
+@media screen and (max-height: 1000px){
+  .comments-list:before {
+    width: 2px;
+    height: 100vh;
+    background: #00b9f7;
+    position: absolute;
+    left: 55px;
+    top: 0;
+  }
+  #commenti {
+    vertical-align: middle;
+    max-height: 550px;
+    overflow: auto;
   }
 }
