--- a/Capstone-FrontEnd/Capstone_Project/src/app/components/user-profile/user-profile.component.html
+++ b/Capstone-FrontEnd/Capstone_Project/src/app/components/user-profile/user-profile.component.html
@@ -37,7 +37,7 @@
                   </button>
                 </li>
                 <li>
-                  <button class="dropdown-item p-1" type="button">
+                  <button class="dropdown-item p-1" type="button" (click)="deleteUser(currentUser.userId)">
                     <i class="bi bi-trash3 mx-2 p-1"></i>Delete
                   </button>
                 </li>
@@ -71,7 +71,7 @@
 <div class="container-fluid d-flex flex-column justify-content-center">
   <div class="profile-card-inf">
     <div class="profile-card-inf__item">
-      <div class="profile-card-inf__title"> <strong>Followers</strong> {{currentUser?.followers?.lenth}}</div>
+      <div class="profile-card-inf__title"> <strong>Followers</strong> {{currentUser?.followers?.length}}</div>
     </div>
     <div class="profile-card-inf__item">
       <div class="profile-card-inf__title"><strong>Post</strong> {{currentUser?.posts?.length}}</div>
