--- a/Capstone-FrontEnd/Capstone_Project/src/app/components/userinfo/userinfo.component.scss
+++ b/Capstone-FrontEnd/Capstone_Project/src/app/components/userinfo/userinfo.component.scss
@@ -205,6 +205,7 @@ div li {
   border-radius: 12px;
   max-width: 800px;
   position: relative;
+  color: #03e9f4;
 
   &.active {
     .profile-card__cnt {
@@ -280,6 +281,7 @@ div li {
 
     strong {
       font-weight: 700;
+      color: #ffffff;
     }
 
   }
@@ -306,7 +308,8 @@ div li {
     &__title {
       font-weight: 700;
       font-size: 20px;
-      color: #326352;
+      color: #03e9f4;
+
     }
 
     &__txt {
