--- a/Capstone-FrontEnd/Capstone_Project/src/app/components/edit-comment/edit-comment.component.scss
+++ b/Capstone-FrontEnd/Capstone_Project/src/app/components/edit-comment/edit-comment.component.scss
@@ -1,4 +1,3 @@
-
 * {
   margin: 0;
   padding: 0;
@@ -6,6 +5,7 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
+
 #overlay {
   position: fixed;
   top: 0px;
@@ -15,13 +15,14 @@
   background-color: #000302ee;
   z-index: 14;
 }
+
 #container {
   z-index: 100;
   display: flex;
   justify-content: center;
   align-items: top;
   position: fixed;
-  margin: auto ;
+  margin: auto;
   top: 0%;
   right: 0;
   left: 0;
@@ -32,16 +33,19 @@
   background-color: #002f4800;
   transition: max-width 0.3s ease, max-height 0.3s ease;
 }
-.replyComment{
+
+.replyComment {
   width: 100%;
   margin: auto;
 }
+
 .inputbox {
   position: relative;
   max-width: 260px;
   margin: 0 auto 10px;
   margin-bottom: 25px;
 }
+
 .inputbox input {
   position: relative;
   width: 100%;
@@ -67,12 +71,14 @@
   transition: 0.5s;
   pointer-events: none;
 }
-.inputbox input:valid ~span,
-.inputbox input:focus ~span {
+
+.inputbox input:valid~span,
+.inputbox input:focus~span {
   color: #45f3ff;
   transform: translateX(-10px) translateY(-34px);
-  font-size: 0,75em;
+  font-size: 0, 75em;
 }
+
 .inputbox i {
   position: absolute;
   left: 0;
@@ -85,8 +91,9 @@
   pointer-events: none;
   z-index: 9;
 }
-.inputbox input:valid ~i,
-.inputbox input:focus ~i {
+
+.inputbox input:valid~i,
+.inputbox input:focus~i {
   height: 44px;
 }
 
@@ -95,7 +102,7 @@
   font-size: 1.5em;
 }
 
-.header{
+.header {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -202,7 +209,8 @@ a:hover {
   display: flex;
   flex-direction: column;
 }
-@media screen and (min-width: 768px){
+
+@media screen and (min-width: 768px) {
   .avatar {
     width: 50px;
     height: 50px;
@@ -281,7 +289,7 @@ a:hover {
   }
 
   .comment p {
-    font-size:16px;
+    font-size: 16px;
     margin-bottom: 7px;
   }
 
@@ -295,36 +303,41 @@ a:hover {
   }
 }
 
-@media screen and (max-width: 730px){
+@media screen and (max-width: 730px) {
   .caption {
     display: none;
   }
 }
 
 @media screen and (max-width: 648px) {
-  .wrapper{
+  .wrapper {
     margin: 2px;
   }
+
   .comment-container {
     max-width: 400px;
     max-height: 300px;
     margin: auto;
   }
+
   .avatar {
     width: 50px;
     height: 50px;
     margin-left: 30px;
     border-radius: 50%;
   }
+
   .comments {
     padding: 16px;
     width: 100%;
   }
+
   .comment p {
     font-size: 14px;
     margin-bottom: 7px;
     width: 100%;
   }
+
   .title {
     font-size: 15px !important;
     font-weight: 700;
@@ -339,14 +352,15 @@ a:hover {
 
 }
 
-@media screen and (max-width: 578px){
-.form-response{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+@media screen and (max-width: 578px) {
+  .form-response {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
 }
-}
+
 @media screen and (max-width: 390px) {
 
   .avatar {
@@ -354,20 +368,24 @@ a:hover {
     height: 50px;
     border-radius: 50%;
   }
+
   .comment-container {
     max-width: 400px;
     max-height: 300px;
     margin: auto;
   }
+
   .comments {
     padding: 12px;
     width: 100%;
   }
+
   .comment p {
     font-size: 12px;
     margin-bottom: 7px;
     width: 100%;
   }
+
   .title {
     font-size: 16px !important;
     font-weight: 700;
@@ -375,6 +393,7 @@ a:hover {
     letter-spacing: 0.02em !important;
     margin-bottom: 2px;
   }
+
   .caption {
     font-weight: 400;
     font-size: 10px !important;
