--- a/Capstone-FrontEnd/Capstone_Project/src/app/components/edit-post/edit-post.component.scss
+++ b/Capstone-FrontEnd/Capstone_Project/src/app/components/edit-post/edit-post.component.scss
@@ -1,21 +1,21 @@
-
-.container{
+.container {
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
 }
 
-a{
+a {
   text-decoration: none;
 }
 
 .inputbox {
   position: relative;
-  width:300px;
+  width: 300px;
   margin: 0 auto 10px;
   margin-bottom: 25px;
 }
+
 .inputbox input {
   position: relative;
   width: 100%;
@@ -41,12 +41,14 @@ a{
   transition: 0.5s;
   pointer-events: none;
 }
-.inputbox input:valid ~span,
-.inputbox input:focus ~span {
+
+.inputbox input:valid~span,
+.inputbox input:focus~span {
   color: #45f3ff;
   transform: translateX(-10px) translateY(-34px);
-  font-size: 0,75em;
+  font-size: 0, 75em;
 }
+
 .inputbox i {
   position: absolute;
   left: 0;
@@ -59,8 +61,9 @@ a{
   pointer-events: none;
   z-index: 9;
 }
-.inputbox input:valid ~i,
-.inputbox input:focus ~i {
+
+.inputbox input:valid~i,
+.inputbox input:focus~i {
   height: 44px;
 }
 
@@ -93,6 +96,7 @@ a{
   height: 40px;
   vertical-align: middle;
 }
+
 .social-card-user-image-carousel {
   border-radius: 50%;
   width: 65px;
@@ -243,6 +247,7 @@ hr {
 .card a:hover {
   transform: scale(0.94);
 }
+
 .card-posts {
   position: relative;
   width: 100%;
@@ -261,7 +266,7 @@ hr {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
-.contenitore-responsive{
+.contenitore-responsive {
   display: flex;
   justify-content: center;
   width: 100%;
@@ -270,22 +275,24 @@ hr {
   align-items: center;
   align-self: auto;
 }
-.container-fluid{
+
+.container-fluid {
   display: flex;
 }
 
-@media screen and (max-width: 768px){
-.form-response{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  width: 100%;
-}
-.social-card-footer {
-  padding: 20px;
-  display: flex;
-  align-items: center;
-  width: 100%;
-}
+@media screen and (max-width: 768px) {
+  .form-response {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .social-card-footer {
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    width: 100%;
+  }
 }
