--- a/Capstone-FrontEnd/Capstone_Project/src/app/components/home-pag/home-pag.component.scss
+++ b/Capstone-FrontEnd/Capstone_Project/src/app/components/home-pag/home-pag.component.scss
@@ -1,5 +1,5 @@
-body{
-  overflow-y: scroll  !important;
+body {
+  overflow-y: scroll !important;
 }
 
 .card-posts {
@@ -20,7 +20,7 @@ body{
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
-.contenitore-responsive{
+.contenitore-responsive {
   display: flex;
   justify-content: center;
   width: 100%;
@@ -29,7 +29,8 @@ body{
   align-items: center;
   align-self: auto;
 }
-.container-fluid{
+
+.container-fluid {
   display: flex;
 }
 
@@ -177,10 +178,10 @@ a {
   border-radius: 10px;
   max-width: 600px;
   margin: auto;
-  -webkit-box-shadow: inset 2px -6px 3px -15px #7FFFD4,0px 11px 20px -1px #7FFFD4;
-  -moz-box-shadow: inset 2px -6px 3px -15px #7FFFD4,0px 11px 20px -1px #7FFFD4;
-  -o-box-shadow: inset 2px -6px 3px -15px #7FFFD4,0px 11px 20px -1px #7FFFD4;
-  box-shadow: inset 2px -6px 3px -15px #7FFFD4,0px 11px 20px -1px #7FFFD4;
+  -webkit-box-shadow: inset 2px -6px 3px -15px #7FFFD4, 0px 11px 20px -1px #7FFFD4;
+  -moz-box-shadow: inset 2px -6px 3px -15px #7FFFD4, 0px 11px 20px -1px #7FFFD4;
+  -o-box-shadow: inset 2px -6px 3px -15px #7FFFD4, 0px 11px 20px -1px #7FFFD4;
+  box-shadow: inset 2px -6px 3px -15px #7FFFD4, 0px 11px 20px -1px #7FFFD4;
 }
 
 
@@ -197,6 +198,7 @@ a {
   height: 40px;
   vertical-align: middle;
 }
+
 .social-card-user-image-carousel {
   border-radius: 50%;
   width: 65px;
@@ -355,13 +357,14 @@ hr {
   overflow: hidden;
   position: relative;
   width: 700px;
-  -webkit-box-shadow: inset 5px 6px 31px -26px #7FFFD4,1px 11px 9px 1px #7FFFD4;
-  -moz-box-shadow: inset 5px 6px 31px -26px #7FFFD4,1px 11px 9px 1px #7FFFD4;
-  -o-box-shadow: inset 5px 6px 31px -26px #7FFFD4,1px 11px 9px 1px #7FFFD4;
-  box-shadow: inset 5px 6px 31px -26px #7FFFD4,1px 11px 9px 1px #7FFFD4;
+  -webkit-box-shadow: inset 5px 6px 31px -26px #7FFFD4, 1px 11px 9px 1px #7FFFD4;
+  -moz-box-shadow: inset 5px 6px 31px -26px #7FFFD4, 1px 11px 9px 1px #7FFFD4;
+  -o-box-shadow: inset 5px 6px 31px -26px #7FFFD4, 1px 11px 9px 1px #7FFFD4;
+  box-shadow: inset 5px 6px 31px -26px #7FFFD4, 1px 11px 9px 1px #7FFFD4;
 }
 
-.slider::before, .slider::after {
+.slider::before,
+.slider::after {
   content: "";
   height: 100%;
   position: absolute;
@@ -400,15 +403,16 @@ hr {
 
 @keyframes scroll {
   0% {
-      transform: translateX(0);
+    transform: translateX(0);
   }
+
   100% {
-      transform: translateX(calc(-100px * 14));
+    transform: translateX(calc(-100px * 14));
   }
 }
 
-.suggeriti{
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+.suggeriti {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-weight: 600;
   font-size: 1.2em;
   color: #7FFFD4;
@@ -423,6 +427,7 @@ hr {
     position: relative;
     width: 700px;
   }
+
   .social-card {
     background: #1b1e25;
     border: 1px solid #f2f2f2;
@@ -431,7 +436,8 @@ hr {
     max-width: 600px;
     margin: auto;
   }
-  .contenitore-responsive{
+
+  .contenitore-responsive {
     display: flex;
     justify-content: center;
     width: 100%;
@@ -440,7 +446,8 @@ hr {
     align-items: center;
     align-self: auto;
   }
-  .container-fluid{
+
+  .container-fluid {
     display: flex;
     justify-content: center;
   }
@@ -466,14 +473,15 @@ hr {
     margin: auto;
   }
 
-  .contenitore-responsive{
+  .contenitore-responsive {
     display: flex;
     justify-content: center;
     width: 100%;
     margin: 0 auto;
     align-items: center;
   }
-  .container-fluid{
+
+  .container-fluid {
     display: flex;
     justify-content: center;
   }
@@ -488,13 +496,15 @@ hr {
     position: relative;
     width: 500px;
   }
+
   .slider .slide-track {
     animation: scroll 90s linear infinite;
     display: flex;
     width: calc(60px * 14);
     transition: animation-play-state 0.5s;
   }
-  .contenitore-responsive{
+
+  .contenitore-responsive {
     display: flex;
     justify-content: center;
     width: 100%;
@@ -503,6 +513,7 @@ hr {
     align-items: center;
     align-self: auto;
   }
+
   .social-card {
     background: #1b1e25;
     border: 1px solid #f2f2f2;
@@ -512,13 +523,14 @@ hr {
     margin: auto;
   }
 
-  .container-fluid{
+  .container-fluid {
     display: flex;
     justify-content: center;
     align-content: center;
     align-items: center;
   }
 }
+
 @media screen and (max-width: 580px) {
   .slider {
     background: transparent;
@@ -528,25 +540,30 @@ hr {
     position: relative;
     width: 400px;
   }
-  .social-card-user-image-carousel{
+
+  .social-card-user-image-carousel {
     padding: 3px;
     width: 50px;
     height: 50px;
   }
+
   .slider .slide {
     height: 150px;
     width: 150px;
     padding: 8px;
   }
+
   .slider .slide-track {
     animation: scroll 90s linear infinite;
     display: flex;
     width: calc(40px * 14);
     transition: animation-play-state 0.5s;
   }
-  .btn-success{
+
+  .btn-success {
     display: none !important;
   }
+
   .social-card {
     background: #1b1e25;
     border: 1px solid #f2f2f2;
@@ -556,19 +573,21 @@ hr {
     height: fit-content;
     margin: auto;
   }
-  .contenitore-responsive{
+
+  .contenitore-responsive {
     display: flex;
     justify-content: center;
     width: 100%;
   }
 
-  .container-fluid{
+  .container-fluid {
     display: flex;
     justify-content: center;
     align-content: center;
     align-items: center;
   }
 }
+
 @media screen and (max-width: 438px) {
 
   .slider {
@@ -579,27 +598,31 @@ hr {
     position: relative;
     width: 340px;
   }
+
   .slider .slide {
     height: 80px;
     width: 80px;
     padding: 8px;
   }
-  .btn-success{
+
+  .btn-success {
     display: none !important;
   }
-  .contenitore-responsive{
+
+  .contenitore-responsive {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
   }
 
-  .container-fluid{
+  .container-fluid {
     display: flex;
     justify-content: center;
     align-content: center;
     align-items: center;
   }
+
   .social-card {
     background: #1b1e25;
     border: 1px solid #f2f2f2;
@@ -608,6 +631,7 @@ hr {
     max-width: 450px;
     margin: auto;
   }
+
   .inputbox {
     position: relative;
     width: 260px;
