--- a/Capstone-FrontEnd/Capstone_Project/src/app/components/reply/reply.component.html
+++ b/Capstone-FrontEnd/Capstone_Project/src/app/components/reply/reply.component.html
@@ -5,12 +5,13 @@
       <div class="comments">
         <div>
           <div class="card v-card v-sheet theme--light elevation-2">
-            <div  class="header d-flex flex-wrap justify-content-start align-items-center align-content-center  gap-1">
+            <div class="header d-flex flex-wrap justify-content-start align-items-center align-content-center  gap-1">
               <div class="v-avatar avatar d-flex justify-content-center" style="height: 50px; width: 50px;"><img
                   [src]="userInfo?.profileImageUrl">
               </div>
               <div>
-                <span class="displayName title">{{userInfo?.username}}</span> <span class="displayName caption">{{comment?.formattedDate}}</span>
+                <span class="displayName title">{{userInfo?.username}}</span> <span
+                  class="displayName caption">{{comment?.formattedDate}}</span>
               </div>
             </div>
             <div class="wrapper comment">
@@ -31,7 +32,8 @@
             </div>
           </div>
           <div>
-            <button type="submit" class="bi bi-send-fill btn p-2" [disabled]="!commentContent" (click)="postReply(this.selectedCommentId, form)"></button>
+            <button type="submit" class="bi bi-send-fill btn p-2" [disabled]="!commentContent"
+              (click)="postReply(this.selectedCommentId, form)"></button>
           </div>
         </div>
       </form>
