--- a/Capstone-FrontEnd/Capstone_Project/src/app/components/userinfo/userinfo.component.html
+++ b/Capstone-FrontEnd/Capstone_Project/src/app/components/userinfo/userinfo.component.html
@@ -12,18 +12,20 @@
           <div class="profile-card__name mb-4">@{{User?.username}}</div>
           <div class="profile-card-loc">
             <span class="profile-card-loc__txt">
-             Attualmente a {{User?.citta}} /
+              Attualmente a {{User?.citta}} /
             </span>
             <span class="profile-card-loc__txt">
               Nato il: {{User?.dataDiNascita}}
-             </span>
+            </span>
             <hr class="my-4">
           </div>
           <h6 class="text-start">Bio:</h6>
           <div class="profile-card__txt text-start"><strong>{{User?.bio}}</strong></div>
           <hr class="my-1">
-          <div class="profile-card-ctr" >
-            <button class="profile-card__button button--orange" (click)="toggleFollowing(User?.userId, currentUser?.userId)">{{ isFollowingUser ? 'Segui già' :'Segui'  }}</button>
+          <div class="profile-card-ctr">
+            <button class="profile-card__button button--orange"
+              (click)="toggleFollowing(User?.userId, currentUser?.userId)">{{ isFollowingUser ? 'Segui già' :'Segui'
+              }}</button>
           </div>
         </div>
       </div>
@@ -51,7 +53,7 @@
 
 <div class="container-fluid d-flex flex-column justify-content-center">
   <div class="profile-card-inf">
-    <div class="profile-card-inf__item" >
+    <div class="profile-card-inf__item">
       <div class="profile-card-inf__title">Followers {{ User?.followers?.length }}</div>
     </div>
 
@@ -70,4 +72,3 @@
     </div>
   </div>
 </div>
-
